[package]
edition = "2021"
name = "ray-tracing"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
clap = {version = "4.4", features = ["derive"]}
derive-new = "0.6"
easy-cast = "0.5"
indicatif = "0.17"
itertools = "0.12"
num = "0.4"
rand = "0.8"
rayon = "1.8"
roots = "0.0.8"
